results/SpecGenBench/4-shot/log-UniqueNumNested-2023_11_28_02_31_49.txt
public class UniqueNumNested {

    //@ requires arr != null;
    //@ ensures \result == -1 <==> (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length && i != j; arr[i] != arr[j]);
    //@ ensures -1 < \result ==> 0 <= \result && \result < arr.length && (\forall int j; 0 <= j && j < arr.length && \result != j; arr[\result] != arr[j]);
    public static int uniqueNum(int[] arr) {
        //@ maintaining 0 <= i && i <= arr.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; i <= j && j < arr.length && i != j; arr[k] != arr[j]));
        //@ decreases arr.length - i;
        for (int i = 0; i < arr.length; ++i) {
            //@ maintaining i < j && j <= arr.length;
            //@ maintaining (\forall int k; i <= k && k < j; arr[i] != arr[k]);
            //@ decreases arr.length - j;
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    break;
            }
            if(j == arr.length)
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:18: error: cannot find symbol
            if(j == arr.length)
               ^
  symbol:   variable j
  location: class UniqueNumNested
1 error

